Updates to all files

--- a/blog.html
+++ b/blog.html
@@ -7,21 +7,25 @@
     <link rel="stylesheet" href="assets/css/blog.css">
 </head>
 <body>
-    <div class="container blog-page">
-        <header>
-            <h1>My First Blog</h1>
-            <a href="index.html" class="back-button">← Back</a>
-        </header>
-        <main id="blogPosts">
-            <!-- Blog posts will be dynamically inserted here -->
-        </main>
-        <footer>
-            <p>Made with ❤️ by Lernantino</p>
-            <p>Portfolio: Lernantino</p>
-            <p>Blog: Full-Stack Blog</p>
-            <p>Email: Lernantino@email.com</p>
-        </footer>
+    <button id="mode-toggle" class="mode-toggle">☀️</button>
+    <div class="outer-container">
+        <div class="container blog-page">
+            <header>
+                <h1>My First Blog</h1>
+                <a href="index.html" class="back-button">← Back</a>
+            </header>
+            <main id="blogPosts">
+                <!-- Blog posts will be dynamically inserted here -->
+            </main>
+            <footer>
+                <p>Made with ❤️ by Jovana Vukovic</p>
+                <p>Portfolio: <a target="_blank" href="https://jovana667.github.io/Professional-portfolio/">Jovana667</a></p>
+                <p>Blog: Full-Stack Blog</p>
+                <p>Email: jovanavukovic4@hotmail.com</p>
+            </footer>
+        </div>
     </div>
     <script src="assets/js/blog.js"></script>
+    <script src="assets/js/logic.js"></script>
 </body>
 </html>
