--- a/index.html
+++ b/index.html
@@ -7,31 +7,35 @@
     <link rel="stylesheet" href="assets/css/form.css">
 </head>
 <body>
-    <div class="container">
-        <div class="left-section">
-            <div class="circle">
-                <h1>My First Blog</h1>
+    <button id="mode-toggle" class="mode-toggle">☀️</button>
+    <div class="outer-container">
+        <div class="container">
+            <div class="left-section">
+                <div class="circle">
+                    <h1>My First Blog</h1>
+                </div>
             </div>
-        </div>
-        <div class="right-section">
-            <h2>What's on your mind?</h2>
-            <form id="blogForm" action="blog.html">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="title">Title</label>
-                    <input type="text" id="title" name="title" required>
-                </div>
-                <div class="form-group">
-                    <label for="content">Content</label>
-                    <textarea id="content" name="content" required></textarea>
-                </div>
-                <button type="submit">Submit</button>
-            </form>
+            <div class="right-section">
+                <h2>What's on your mind?</h2>
+                <form id="blogForm" action="blog.html">
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" id="username" name="username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="title">Title</label>
+                        <input type="text" id="title" name="title" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="content">Content</label>
+                        <textarea id="content" name="content" required></textarea>
+                    </div>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
         </div>
     </div>
     <script src="assets/js/form.js"></script>
+    <script src="assets/js/logic.js"></script>
 </body>
 </html>
