changes to CSS and html files

--- a/blog.html
+++ b/blog.html
@@ -7,21 +7,24 @@
     <link rel="stylesheet" href="assets/css/blog.css">
 </head>
 <body>
-    <button id="mode-toggle" class="mode-toggle">☀️</button>
-    <div class="outer-container">
+    <div class="outer-container"> 
         <div class="container blog-page">
             <header>
                 <h1>My First Blog</h1>
+              <div id="header-items">
                 <a href="index.html" class="back-button">← Back</a>
+                <button id="mode-toggle" class="mode-toggle">☀️</button>
+              </div>
             </header>
             <main id="blogPosts">
-                <!-- Blog posts will be dynamically inserted here -->
             </main>
             <footer>
                 <p>Made with ❤️ by Jovana Vukovic</p>
-                <p>Portfolio: <a target="_blank" href="https://jovana667.github.io/Professional-portfolio/">Jovana667</a></p>
-                <p>Blog: Full-Stack Blog</p>
-                <p>Email: jovanavukovic4@hotmail.com</p>
+                <div id="footer-details">
+                <p><i><b>Portfolio:</b> <a target="_blank" href="https://jovana667.github.io/Professional-portfolio/">Jovana667</a></i></p>
+                <p><i><b>Blog:</b> Full-Stack Blog</i></p>
+                <p><i><b>Email:</b> jovanavukovic4@hotmail.com</i></p>
+                </div>
             </footer>
         </div>
     </div>
