--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="assets/css/form.css">
 </head>
 <body>
+<div class="outer-container">
+<header>
     <button id="mode-toggle" class="mode-toggle">☀️</button>
-    <div class="outer-container">
+</header>
         <div class="container">
             <div class="left-section">
                 <div class="circle">
